# small-tools-cpp

./: CMakeLists.txt  README.adoc
nsshot/: CMakeLists.txt  main.cpp
pixels2svg/: CMakeLists.txt  main.cpp  png.cpp  png.hpp
